Refactor of types for smoother code and minor code fixes

--- a/src/main/webapp/WEB-INF/index.yaml
+++ b/src/main/webapp/WEB-INF/index.yaml
@@ -10,19 +10,39 @@ indexes:
       - name: end
   - kind: Appointment
     properties:
+      - name: nurseId
+      - name: start
+  - kind: Appointment
+    properties:
       - name: patientId
       - name: state
       - name: end
   - kind: Appointment
     properties:
+      - name: patientId
+      - name: start
+  - kind: Appointment
+    properties:
       - name: vendorId
       - name: state
       - name: end
+  - kind: Appointment
+    properties:
+      - name: vendorId
+      - name: start
   - kind: Invoice
     properties:
       - name: vendorId
       - name: id
         direction: desc
+  - kind: License
+    properties:
+      - name: nurseId
+      - name: expirationDate
+  - kind: Patient
+    properties:
+      - name: billingVendorId
+      - name: estLastDayOfService
   - kind: Password
     properties:
       - name: userId
