--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,6 @@
       <plugin>
         <groupId>net.alchim31.maven</groupId>
         <artifactId>yuicompressor-maven-plugin</artifactId>
-        <version>1.3.2</version>
         <configuration>
           <preProcessAggregates>true</preProcessAggregates>
           <aggregations>
@@ -135,7 +134,7 @@
           <execution>
             <phase>process-resources</phase>
             <configuration>
-              <tasks>
+              <target>
                 <copy todir="${basedir}/target/${project.artifactId}-${project.version}/js/html" flatten="true">
                   <fileset dir="../common/src/main/js/html">
                     <include name="*.html"/>
@@ -144,7 +143,7 @@
                     <include name="*.html"/>
                   </fileset>
                 </copy>
-              </tasks>
+              </target>
             </configuration>
             <goals>
               <goal>run</goal>
